src/test/deca/syntax/invalid/provided/BadMethodArguments.deca
//DESCRIPTION: Une methode avec de mauvais argument
class alpha{
	void get(a){
}
}
